add order taking without logging order to db
